<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddNewDream">

    <LinearLayout
        android:id="@+id/container_conteudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:orientation="vertical"
        android:padding="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/add_your_dream_title"
                app:layout_constraintLeft_toRightOf="@+id/voltar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/voltar"
                android:padding="15px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:contentDescription="@string/go_back_description"
                android:onClick="goBack"
                android:src="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="25dp"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_title" />

        <EditText
            android:id="@+id/campoTitulo"
            style="@style/Input"
            android:layout_marginVertical="15dp"
            android:inputType="text" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dreamtype" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardNormal"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/medium"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:contentPadding="20dp">

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dream_type_1"
                android:textColor="@color/dark" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPesadelo"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/medium"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:contentPadding="20dp">

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dream_type_2"
                android:textColor="@color/dark" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDali"
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/medium"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:contentPadding="20dp">

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dream_type_3"
                android:textColor="@color/dark" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_description" />

        <EditText
            android:id="@+id/campoDescricao"
            style="@style/Input"
            android:layout_marginVertical="15dp"
             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="addDreamToHiveMind"
            android:text="@string/add" />

    </LinearLayout>
</ScrollView>