<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullDream">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/list_error"
            style="@style/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/load_error"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/container_conteudo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/add_dream"
                android:onClick="goBack"
                android:src="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/full_dream_title"
                style="@style/Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation"
               />

            <TextView
                android:id="@+id/full_dream_type"
                style="@style/TextoItalico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation"
               />

            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/full_dream_description"
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>